# serial

./: CMakeLists.txt
cmake/: serialCPack.cmake  serialConfig.cmake.in
examples/: CMakeLists.txt
tests/: CMakeLists.txt
